##
##
##

ACLOCAL_AMFLAGS = -I ../aclocal

SUBDIRS =
SUBDIRS += bh
SUBDIRS += bisort
SUBDIRS += em3d
SUBDIRS += health
SUBDIRS += mst
SUBDIRS += perimeter
SUBDIRS += power
SUBDIRS += treeadd
SUBDIRS += tsp
##SUBDIRS += voronoi

include $(top_srcdir)/../automake/subdirs.am
include $(top_srcdir)/../automake/local.am

